fix for navigation and product image wrapping

--- a/resources/assets/css/cp.css
+++ b/resources/assets/css/cp.css
@@ -44,7 +44,7 @@
 	-moz-box-shadow: 0px 0px 1px 3px rgba(17,48,81,0.1), inset 0px -1px 0px 0px rgba(255,255,255,0.1);
 	box-shadow: 0px 0px 1px 3px rgba(17,48,81,0.1), inset 0px -1px 0px 0px rgba(255,255,255,0.1);
 	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#528cb6', EndColorStr='#4473a6');
-	min-width: 1260px;
+	min-width: 1261px;
 }
 
 .navigation a {
@@ -2210,6 +2210,12 @@ ul.search-results {
 
 .options .group {
 	padding: 20px 0 0 20px;
+}
+
+.listing h2 {
+	width: 100%;
+	clear: both;
+	float: none;
 }
 
 
